tests/const_block_compiler_error_at_pack_span_bad.stderr
tests/const_block_compiler_error_at_pack_span_bad.hop:11:10: error: HOP2075: consteval error: pack boom
