tests/const_block_compiler_error_at_pack_span_bad.hop
// Verifies const block compiler error at pack span is rejected.
import "compiler"

fn demo(args ...anytype) {
	const {
		compiler.error_at(source_location_of(args[1]), "pack boom")
	}
}

fn main() {
	demo(1, "two", true)
}
